# OpenGL_Quadric_Based_Mesh_Decimation

./: CMakeLists.txt  README.md  test.cpp
lib/embed-resource/: Makefile  cmake_install.cmake  embed-resource
